<?xml version="1.0"?>
<package format="2">
  <name>straf_recovery</name>
  <version>0.0.0</version>
  <description>The straf_recovery package</description>

  <maintainer email="mitranopeter@gmail.com">Peter Mitrano</maintainer>

  <license>WTFPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <exec_depend>libpcl-all</exec_depend>

  <depend>base_local_planner</depend>
  <depend>nav_core</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <nav_core plugin="${prefix}/straf_recovery_plugin.xml"/>
  </export>

</package>
